# qsubmit

./: Cargo.toml  Makefile.toml
src/: cli.rs  cmd.rs  lib.rs  main.rs  queue.rs
tests/queue/: 00-real.sh  01-fake.sh
