# [[file:qsubmit.note::69fb4774][69fb4774]]
[package]
name = "qsubmit"
version = "0.0.3"
edition = "2021"
authors = ["Wenping Guo <ybyygu@gmail.com>"]

[dependencies]
gut = { version = "0.4", package = "gchemol-gut" }
duct = "0.13.5"
tempfile = "3"
clap = { version = "4", features = ["derive"] }
clap_complete = "4.0.5"
pueue-lib = "0.13.1"
pueue = "1"

# workspace independent
[workspace]

[dev-dependencies]

[patch.crates-io]
gchemol-gut = { path = "/home/ybyygu/Workspace/Programming/gchemol-rs/gut" }
# 69fb4774 ends here
